--- a/port/affiliate.html
+++ b/port/affiliate.html
@@ -76,7 +76,7 @@
       }
 
       // Tampilkan link referral
-      const refLink = `${window.location.origin}/informasi.html?ref=${currentUserId}`;
+      const refLink = `${window.location.origin}/port/informasi.html?ref=${currentUserId}`;
       document.getElementById("referralLink").value = refLink;
 
       // Hitung total klik dan komisi
